--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="col-md-9 col-xs-12 full">
-  <h1>404!! Page not found</h1>
+  <h1 class="error404">404!! Page not found</h1>
 
   <div class="row">
     <div class="col-md-12 col-xs-12 footer">
