--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
   <ul class="items-wrapper"><!-- START FULL PAGE -->
 
-    <li class="inside project-item" ng-repeat-start="link in (filteredLinks = (links | filter:searchText | filterPanel:filterConfiguration))">
+    <li class="inside project-item" ng-repeat-start="link in (filteredLinks = (links | filter:searchText | filterPanel:filterConfiguration | orderBy:random )) ">
       <div class="project-outer" ng-class="{demo: link.tags.indexOf('demo')>=0}">
         <div class="link-title">
           <a data-track-action="link-title" data-track-label="{{link.urlLink}}"  href="{{link.url}}" target="_blank" data-track-action="Select" data-track-label="{{service.entity.label}}">{{link.name}}</a>
