added BluePic sample

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <footer>
         Made with <i class="fa fa-heart" aria-hidden="true"></i> by The Bluemix Developer Advocacy team</br>
         Powered by <a href="https://www.ibm.com/cloud-computing/bluemix" onclick="_gaq.push(['_trackEvent', 'button3', 'clicked'])" >IBM Bluemix.</a> See all of our samples on <a href="https://github.com/IBM-Bluemix">IBM-Bluemix GitHub</a><br>
-        Copyright © IBM 2017
+        Copyright © IBM 2017.
       </footer>
     </div>
   </div>
