--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         -->
 
         <div class="link-title">
-          <a data-track-action="link-title" data-track-label="{{link.urlLink}}"  href="{{link.url}}" target="_blank" data-track-action="Select" data-track-label="{{service.entity.label}}">{{link.name}}</a>
+          <a id="demoID" data-track-action="link-title" data-track-label="{{link.urlLink}}"  href="{{link.url}}" target="_blank" data-track-action="Select" data-track-label="{{service.entity.label}}">{{link.name}}</a>
           <a href="{{link.homepage}}" ng-if="link.homepage">
             <span class="e1a-link e1a-sm"></span>
           </a>
@@ -182,10 +182,10 @@
 
       <div class="tag-level">
         <span ng-show="{{link.blogPost !== ''}}" class="project-link">
-          <a data-track-action="link-blog" data-track-label="{{link.blogPost}}" href="{{link.blogPost}}" class="hrefLink" target="_blank">Blog Post</a>
+          <a id="BlogPost" data-track-action="link-blog" data-track-label="{{link.blogPost}}" href="{{link.blogPost}}" class="hrefLink" target="_blank">Blog Post</a>
         </span>
         <span ng-show="{{link.urlLink !== ''}}" class="project-link">
-          <a data-track-action="link-demo" data-track-label="{{link.urlLink}}" href="{{link.urlLink}}" class="hrefLink" target="_blank">Live Demo</a>
+          <a id="LiveDemo" data-track-action="link-demo" data-track-label="{{link.urlLink}}" href="{{link.urlLink}}" class="hrefLink" target="_blank">Live Demo</a>
         </span>
       </div>
 
