Add functionality for view Video button

--- a/index.html
+++ b/index.html
@@ -187,6 +187,9 @@
         <span ng-show="{{link.urlLink !== ''}}" class="project-link">
           <a id="LiveDemo" data-track-action="link-demo" data-track-label="{{link.urlLink}}" href="{{link.urlLink}}" class="hrefLink" target="_blank">Live Demo</a>
         </span>
+        <span ng-show="{{link.urlVideo !== ''}}" class="project-link">
+          <a id="LiveVideo" data-track-action="link-video" data-track-label="{{link.urlVideo}}" href="{{link.urlVideo}}" class="hrefLink" target="_blank">View Video</a>
+        </span>
       </div>
 
     </li>
