--- a/index.html
+++ b/index.html
@@ -15,21 +15,20 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/74dfc6cf47.css">
   <link rel="stylesheet" href="./css/bootstrap.css">
   <link rel="stylesheet" href="./css/emojione-awesome.css" />
-  <link rel="stylesheet" href="./fancyplayer_code/css/jquery.fancybox.css" type="text/css" media="screen" />
   <link rel="stylesheet" href="./css/main.css">
+
 </head>
 
 <body class="home overflow-hidden" ng-controller="MainController">
-
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NDPHZL"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
-
     <div class="header-panel shadow-z-2">
       <div class="header-container">
         <div class="header-row">
+
           <div class="header01 header-logo">
             <div class="row-picture">
               <a href="index"><img id="about" src="./icons/bluemix_logo.svg" ></a>
@@ -37,8 +36,8 @@
             <div class="row-details">
               <p class="list-group-item-text">IBM Bluemix | GitHub.io</p>
             </div>
-
           </div>
+
           <div class="header02">
             <div class="social-icons">
               <a class="icon" href="https://www.ibm.com/cloud-computing/bluemix" data-track-action="Icon" data-track-label="Bluemix" target="_blank"><img id="bluemix" class="logo-icon" src="./icons/bluemix_logo_white.svg" ></a>
@@ -46,6 +45,7 @@
               <a class="icon" data-track-action="Icon" data-track-label="github" target="_blank" href="https://github.com/IBM-Bluemix"><i class="fa fa-github"></i></a>
             </div>
           </div>
+
         </div>
       </div>
     </div>
@@ -64,161 +64,152 @@
           <div class="fil">
             <form role="search">
               <div class="form-group search-input">
-                <input type="text" class="form-control" placeholder="Search" ng-model="searchText">
+                <input type="text" class="form-control" placeholder="Search" ng-model="searchTextData">
               </div>
             </form>
           </div>
 
-
-
-
-
-
-          <div class="ser filter" >
-            <form role="search">
-              <div class="filterButton" id="filterButton">
-                <span> Filter </span>
-                <svg class="filter-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                viewBox="0 0 16.8 13.9" enable-background="new 0 0 16.8 13.9" xml:space="preserve">
-                <polygon fill-rule="evenodd" clip-rule="evenodd" fill="#3D70B2" points="4,0 0,4.6 2.7,4.6 2.7,13.9 5.3,13.9 5.3,4.6 8,4.6 "/>
-                <polygon fill-rule="evenodd" clip-rule="evenodd" fill="#3D70B2" points="12.8,13.9 16.8,9.2 14.1,9.2 14.1,0 11.4,0 11.4,9.2
-                8.8,9.2 "/>
-              </svg>
+          <div class="filterAreaDiv">
+            <div class='bx--select'>
+              <select id="sortBy" ng-model="filterConfiguration.sort" class="form-sorting">
+                <option  disabled selected value >Sort by: All</option>
+                <option value="Most Viewed" >Most Viewed</option>
+                <option value="Recently Added" >Recently Added</option>
+              </select>
             </div>
-        </form>
+
+            <div class="ser filter" >
+              <form role="search">
+                <div class="filterButton" id="filterButton">
+                  <span> Filter </span>
+                  <svg class="filter-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 16.8 13.9" enable-background="new 0 0 16.8 13.9" xml:space="preserve">
+                    <polygon fill-rule="evenodd" clip-rule="evenodd" fill="#3D70B2" points="4,0 0,4.6 2.7,4.6 2.7,13.9 5.3,13.9 5.3,4.6 8,4.6 "/>
+                    <polygon fill-rule="evenodd" clip-rule="evenodd" fill="#3D70B2" points="12.8,13.9 16.8,9.2 14.1,9.2 14.1,0 11.4,0 11.4,9.2
+                    8.8,9.2 "/>
+                  </svg>
+                </div>
+              </form>
+            </div>
+          </div>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="page-container">
+    <div class="dropdown" id="filterDropdown">
+      <div class="inside filter-category">
+        <span class="filter-text">LANGUAGES:</span><br/>
+        <div class="language search-body">
+          <table>
+            <tr>
+              <button  type="button" data-track-action="Filter" data-track-label="Python" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('Python', true)">Python</button>
+              <button  type="button" data-track-action="Filter" data-track-label="NodeJS" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('NodeJS', true)">NodeJS</button>
+              <button type="button" data-track-action="Filter" data-track-label="Swift" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('Swift', true)">Swift</button>
+              <button  type="button" data-track-action="Filter" data-track-label="Java" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('Java', true)">Java</button>
+            </tr>
+          </table>
+        </div>
+      </div>
+
+      <div class="inside 01">
+        <span class="filter-text">CATEGORIES:</span>
+        <div class="category search-body">
+          <table>
+            <tr>
+              <button  type="button" data-track-action="Filter" data-track-label="IoT" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('IoT', true)">IoT</button>
+              <button  type="button" data-track-action="Filter" data-track-label="Web" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('Web', true)">Web</button>
+              <button  type="button" data-track-action="Filter" data-track-label="Mobile" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('Mobile', true)">Mobile</button>
+            </tr>
+          </table>
+        </div>
       </div>
 
     </div>
+  </div>
+
+
+
+  <div class="page-container main outer">
+    <div class="TotHome">
+      I found <b>{{links.length}}</b> features samples for you</span><span ng-if="filteredLinks.length != links.length">, <b>{{filteredLinks.length}}</b> and code samples matching the search/filter criteria.</span>
+    </div>
+
+    <ul class="items-wrapper"><!-- START FULL PAGE -->
+      <li class="inside project-item" ng-repeat-start="link in (filteredLinks = (links | filter:searchTextData | filterPanel:filterConfiguration | filter:filterConfiguration.sort |orderBy:random )) ">
+        <div class="project-outer" ng-class="{demo: link.tags.indexOf('demo')>=0}">
+          <!--
+          <div class="mostClicked" ng-if="link.MostClicked !==''">
+          {{link.MostClicked}}
+        </div>
+      -->
+
+      <div class="link-title">
+        <a id="demoID" data-track-action="link-title" data-track-label="{{link.urlLink}}"  href="{{link.url}}" target="_blank" data-track-action="Select" data-track-label="{{service.entity.label}}">{{link.name}}</a>
+        <a href="{{link.homepage}}" ng-if="link.homepage">
+          <span class="e1a-link e1a-sm"></span>
+        </a>
+      </div>
+      <div class="project-content description">
+        <span ng-bind-html="link.description "></span>
+      </div>
+
+      <div class="project-content tag-group">
+
+        <div class="tag-holder">
+          <span class="FirSpanLeft">LANGUAGES: </span>
+          <span class="tag-filter language">{{link.language || '&nbsp;'}}</span>
+        </div>
+
+        <span class="FirSpanLeft">CATEGORY: </span>
+        <div class="tag-holder">
+          <span class="tag-filter category">{{link.category || '&nbsp;'}}</span>
+        </div>
+
+        <span class="FirSpanLeft">SERVICES: </span>
+        <div class="tag-services">
+          <span ng-repeat="item in link.services">
+            <span class="services ">{{item || '&nbsp;'}}{{$last ? '' : ','}}</span>
+          </span>
+
+        </div>
+      </div>
+      <meta name="description" content="{{link.search}}">
+    </div>
+
+    <div class="tag-level">
+      <span ng-show="{{link.blogPost !== ''}}" class="project-link">
+        <a id="BlogPost" data-track-action="link-blog" data-track-label="{{link.blogPost}}" href="{{link.blogPost}}" class="hrefLink" target="_blank">Blog Post</a>
+      </span>
+      <span ng-show="{{link.urlLink !== ''}}" class="project-link">
+        <a id="LiveDemo" data-track-action="link-demo" data-track-label="{{link.urlLink}}" href="{{link.urlLink}}" class="hrefLink" target="_blank">Live Demo</a>
+      </span>
+      <span ng-show="{{link.urlVideo !== ''}}" class="project-link">
+        <a id="LiveVideo" data-track-action="link-video" data-track-label="{{link.urlVideo}}" href="{{link.urlVideo}}" class="hrefLink" target="_blank">View Video</a>
+      </span>
+    </div>
+
+  </li>
+  <div ng-repeat-end=""></div>
+
+</ul>
+
+<div class="row">
+  <div class="col-md-12 col-xs-12 footer">
+    <footer>
+      Made with <i class="fa fa-heart" aria-hidden="true"></i> by The Bluemix Developer Advocacy team</br>
+      Powered by <a href="https://www.ibm.com/cloud-computing/bluemix" onclick="_gaq.push(['_trackEvent', 'button3', 'clicked'])" >IBM Bluemix.</a> See all of our samples on <a href="https://github.com/IBM-Bluemix">IBM-Bluemix GitHub</a><br>
+      Copyright © IBM 2017.
+    </footer>
   </div>
 </div>
-
-
-
-<div class="page-container">
-  <div class="dropdown" id="filterDropdown">
-    <div class="inside filter-category">
-      <span class="filter-text">LANGUAGES:</span><br/>
-      <div class="language search-body">
-        <table>
-          <tr>
-            <button  type="button" data-track-action="Filter" data-track-label="Python" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('Python', true)">Python</button>
-            <button  type="button" data-track-action="Filter" data-track-label="NodeJS" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('NodeJS', true)">NodeJS</button>
-            <button type="button" data-track-action="Filter" data-track-label="Swift" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('Swift', true)">Swift</button>
-            <button  type="button" data-track-action="Filter" data-track-label="Java" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('Java', true)">Java</button>
-
-          </tr>
-        </table>
-      </div>
-    </div>
-
-    <div class="inside 01">
-      <span class="filter-text">CATEGORIES:</span>
-      <div class="category search-body">
-        <table>
-          <tr>
-            <button  type="button" data-track-action="Filter" data-track-label="IoT" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('IoT', true)">IoT</button>
-            <button  type="button" data-track-action="Filter" data-track-label="Web" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('Web', true)">Web</button>
-            <button  type="button" data-track-action="Filter" data-track-label="Mobile" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('Mobile', true)">Mobile</button>
-          </tr>
-        </table>
-      </div>
-    </div>
-
-  </div>
-</div>
-
-
-
-
-
-<div class="page-container main outer">
-  <meta name="keywords" content="Testing">
-
-  <div class="TotHome">
-    I found <b>{{links.length}}</b> features samples for you</span><span ng-if="filteredLinks.length != links.length">, <b>{{filteredLinks.length}}</b> and code samples matching the search/filter criteria.</span>
-  </div>
-
-  <ul class="items-wrapper"><!-- START FULL PAGE -->
-
-    <li class="inside project-item" ng-repeat-start="link in (filteredLinks = (links | filter:searchText | filterPanel:filterConfiguration | orderBy:random )) ">
-      <div class="project-outer" ng-class="{demo: link.tags.indexOf('demo')>=0}">
-        <!--
-        <div class="mostClicked" ng-if="link.MostClicked !==''">
-            {{link.MostClicked}}
-        </div>
-        -->
-
-        <div class="link-title">
-          <a id="demoID" data-track-action="link-title" data-track-label="{{link.urlLink}}"  href="{{link.url}}" target="_blank" data-track-action="Select" data-track-label="{{service.entity.label}}">{{link.name}}</a>
-          <a href="{{link.homepage}}" ng-if="link.homepage">
-            <span class="e1a-link e1a-sm"></span>
-          </a>
-        </div>
-        <div class="project-content description">
-          <span ng-bind-html="link.description | emoji"></span>
-        </div>
-
-        <div class="project-content tag-group">
-
-
-          <div class="tag-holder">
-            <span class="FirSpanLeft">LANGUAGES: </span>
-            <span class="tag-filter language">{{link.language || '&nbsp;'}}</span>
-          </div>
-
-          <span class="FirSpanLeft">CATEGORY: </span>
-          <div class="tag-holder">
-            <span class="tag-filter category">{{link.category || '&nbsp;'}}</span>
-          </div>
-
-          <span class="FirSpanLeft">SERVICES: </span>
-          <div class="tag-services">
-            <span ng-repeat="item in link.services">
-              <span class="services ">{{item || '&nbsp;'}}{{$last ? '' : ','}}</span>
-            </span>
-          </div>
-        </div>
-        <meta name="description" content="{{link.search}}">
-
-      </div>
-
-      <div class="tag-level">
-        <span ng-show="{{link.blogPost !== ''}}" class="project-link">
-          <a id="BlogPost" data-track-action="link-blog" data-track-label="{{link.blogPost}}" href="{{link.blogPost}}" class="hrefLink" target="_blank">Blog Post</a>
-        </span>
-        <span ng-show="{{link.urlLink !== ''}}" class="project-link">
-          <a id="LiveDemo" data-track-action="link-demo" data-track-label="{{link.urlLink}}" href="{{link.urlLink}}" class="hrefLink" target="_blank">Live Demo</a>
-        </span>
-        <span ng-show="{{link.urlVideo !== ''}}" class="project-link">
-          <a id="LiveVideo" data-track-action="link-video" data-track-label="{{link.urlVideo}}" href="{{link.urlVideo}}" class="hrefLink" target="_blank">View Video</a>
-        </span>
-      </div>
-
-    </li>
-    <div ng-repeat-end=""></div>
-
-  </ul>
-
-
-
-  <div class="row">
-    <div class="col-md-12 col-xs-12 footer">
-      <footer>
-        Made with <i class="fa fa-heart" aria-hidden="true"></i> by The Bluemix Developer Advocacy team</br>
-        Powered by <a href="https://www.ibm.com/cloud-computing/bluemix" onclick="_gaq.push(['_trackEvent', 'button3', 'clicked'])" >IBM Bluemix.</a> See all of our samples on <a href="https://github.com/IBM-Bluemix">IBM-Bluemix GitHub</a><br>
-        Copyright © IBM 2017.
-      </footer>
-    </div>
-  </div>
-
-  <br>
+<br>
 </div> <!-- end /.container -->
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-
-
 <script src="//cdn.jsdelivr.net/emojione/2.1.3/lib/js/emojione.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
@@ -229,10 +220,5 @@
 <script src="./js/main.js"></script>
 <script src="./js/analytics.js"></script>
 <script src="./js/scripts.js"></script>
-
-
-
-
-
 </body>
 </html>
