Add new sample and update footer
Sample Added: ChatBot - A Voice-enabled native Android app

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" href="./img/favicon.png" />
   <title>Bluemix on Github - Github Pages</title>
   <meta name="author" content="Twana Daniel || IBM Bluemix - Developer Advocate Team" />
-  <meta name="description" content="IBM Bluemix github.io page is the place where developers can find featured code samples, you can find code samples from things like IoT samples, watson samples, mobile, networking and Toolchain samples." />
+  <meta name="description" content="IBM Bluemix github.io page is the place where developers can find featured Bluemix samples that is maintained supported by the team, you can filter samples by languages, categories or even industries" />
   <meta name="keywords" content="Build a toolchain application on Bluemix, Bluemix code Samples, Watson code samples, IoT samples, Bluemix Samples, Mobile development on Bluemix, Cloudant database on Bluemix, Text to Speech, Speech To Text" />
 
   <!-- FontAwesome icons -->
@@ -106,8 +106,9 @@
             <tr>
               <button  type="button" data-track-action="Filter" data-track-label="Python" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('Python', true)">Python</button>
               <button  type="button" data-track-action="Filter" data-track-label="NodeJS" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('NodeJS', true)">NodeJS</button>
-              <button type="button" data-track-action="Filter" data-track-label="Swift" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('Swift', true)">Swift</button>
               <button  type="button" data-track-action="Filter" data-track-label="Java" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('Java', true)">Java</button>
+              <button type="button" data-track-action="Filter" data-track-label="Swift" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('Swift', true)">Swift</button>
+              <button type="button" data-track-action="Filter" data-track-label="Android" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('Android', true)">Android</button>
             </tr>
           </table>
         </div>
@@ -198,7 +199,7 @@
 <div class="row">
   <div class="col-md-12 col-xs-12 footer">
     <footer>
-      Made with <i class="fa fa-heart" aria-hidden="true"></i> by The Bluemix Developer Advocacy team</br>
+      Made with <i class="fa fa-heart" aria-hidden="true"></i> by the Bluemix team</br>
       Powered by <a href="https://www.ibm.com/cloud-computing/bluemix" onclick="_gaq.push(['_trackEvent', 'button3', 'clicked'])" >IBM Bluemix.</a> See all of our samples on <a href="https://github.com/IBM-Bluemix">IBM-Bluemix GitHub</a><br>
       Copyright © IBM 2017.
     </footer>
