Add Watson filters

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
         <div class="category search-body">
           <table>
             <tr>
+              <button  type="button" data-track-action="Filter" data-track-label="Watson" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('Watson', true)">Watson</button>
               <button  type="button" data-track-action="Filter" data-track-label="IoT" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('IoT', true)">IoT</button>
               <button  type="button" data-track-action="Filter" data-track-label="Web" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('Web', true)">Web</button>
               <button  type="button" data-track-action="Filter" data-track-label="Mobile" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('Mobile', true)">Mobile</button>
