Update search placeholder

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="fil">
             <form role="search">
               <div class="form-group search-input">
-                <input type="text" class="form-control" placeholder="Search" ng-model="searchTextData">
+                <input type="text" class="form-control" placeholder="Search by anything: IoT, Watson, Mobile, Web, Industries like insurance... " ng-model="searchTextData">
               </div>
             </form>
           </div>
