--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
         <div class="language search-body">
           <table>
             <tr>
-              <button  type="button" data-track-action="Filter" data-track-label="Python" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('Python', true)">Python</button>
-              <button  type="button" data-track-action="Filter" data-track-label="NodeJS" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('NodeJS', true)">NodeJS</button>
-              <button  type="button" data-track-action="Filter" data-track-label="Java" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('Java', true)">Java</button>
-              <button type="button" data-track-action="Filter" data-track-label="Swift" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('Swift', true)">Swift</button>
-              <button type="button" data-track-action="Filter" data-track-label="Android" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('Android', true)">Android</button>
+              <button  type="button" data-track-action="Filter" data-track-label="Python" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleLanguage('Python')">Python</button>
+              <button  type="button" data-track-action="Filter" data-track-label="NodeJS" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleLanguage('NodeJS')">NodeJS</button>
+              <button  type="button" data-track-action="Filter" data-track-label="Java" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleLanguage('Java')">Java</button>
+              <button type="button" data-track-action="Filter" data-track-label="Swift" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleLanguage('Swift')">Swift</button>
+              <button type="button" data-track-action="Filter" data-track-label="Android" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleLanguage('Android')">Android</button>
 
             </tr>
           </table>
@@ -122,10 +122,10 @@
         <div class="category search-body">
           <table>
             <tr>
-              <button  type="button" data-track-action="Filter" data-track-label="Watson" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('Watson', true)">Watson</button>
-              <button  type="button" data-track-action="Filter" data-track-label="IoT" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('IoT', true)">IoT</button>
-              <button  type="button" data-track-action="Filter" data-track-label="Web" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('Web', true)">Web</button>
-              <button  type="button" data-track-action="Filter" data-track-label="Mobile" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleTagConfiguration('Mobile', true)">Mobile</button>
+              <button  type="button" data-track-action="Filter" data-track-label="Watson" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleCategory('Watson')">Watson</button>
+              <button  type="button" data-track-action="Filter" data-track-label="IoT" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleCategory('IoT')">IoT</button>
+              <button  type="button" data-track-action="Filter" data-track-label="Web" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleCategory('Web')">Web</button>
+              <button  type="button" data-track-action="Filter" data-track-label="Mobile" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleCategory('Mobile')">Mobile</button>
             </tr>
           </table>
         </div>
@@ -141,7 +141,7 @@
     </div>
 
     <ul class="items-wrapper"><!-- START FULL PAGE -->
-      <li class="inside project-item" ng-repeat="sample in ( filteredLinks = ( samples | filter:searchTextData | filter:tagP.sort |  orderBy: random | filter: myFilter2 | samplesFilter:tagP)) " ng-class="filteredLinks">
+      <li class="inside project-item" ng-repeat="sample in ( filteredLinks = ( samples | filter:searchTextData | filter:tagP.sort | samplesFilter:tagP)) " ng-class="filteredLinks">
 
         <div class="project-outer" ng-class="{demo: link.tags.indexOf('demo')>=0}">
 
