remove protocols from dependencies

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="keywords" content="Build a toolchain application on Bluemix, Bluemix code Samples, Watson code samples, IoT samples, Bluemix Samples, Mobile development on Bluemix, Cloudant database on Bluemix, Text to Speech, Speech To Text" />
 
   <!-- FontAwesome icons -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/74dfc6cf47.css">
+  <link rel="stylesheet" href="//use.fontawesome.com/74dfc6cf47.css">
   <link rel="stylesheet" href="./css/bootstrap.css">
   <link rel="stylesheet" href="./css/emojione-awesome.css" />
   <link rel="stylesheet" href="./css/main.css">
@@ -212,12 +212,12 @@
 
   <!-- Vendor Libs: jQuery only used for Bootstrap functionality -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"> </script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"> </script>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"> </script>
 
   <!-- UI Libs -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.4.0/ui-bootstrap.min.js"> </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.4.0/ui-bootstrap-tpls.min.js"> </script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.4.0/ui-bootstrap.min.js"> </script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.4.0/ui-bootstrap-tpls.min.js"> </script>
 
   <!-- App libs -->
   <script src="app.js"></script>
