Add new samples
- Deploy Scalable Docker Application To IBM-Bluemix
- Feedback Mobile App using Ionic & Cloudant
- Cloud Insurance Co. IOS
-Cloud Insurance Co. Android

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <button  type="button" data-track-action="Filter" data-track-label="Java" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleLanguage('Java')">Java</button>
               <button type="button" data-track-action="Filter" data-track-label="Swift" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleLanguage('Swift')">Swift</button>
               <button type="button" data-track-action="Filter" data-track-label="Android" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleLanguage('Android')">Android</button>
-
+              <button type="button" data-track-action="Filter" data-track-label="Hybrid" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleLanguage('Hybrid')">Hybrid</button>
             </tr>
           </table>
         </div>
@@ -122,10 +122,10 @@
         <div class="category search-body">
           <table>
             <tr>
-              <button  type="button" data-track-action="Filter" data-track-label="Watson" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleCategory('Watson')">Watson</button>
               <button  type="button" data-track-action="Filter" data-track-label="IoT" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleCategory('IoT')">IoT</button>
               <button  type="button" data-track-action="Filter" data-track-label="Web" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleCategory('Web')">Web</button>
               <button  type="button" data-track-action="Filter" data-track-label="Mobile" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleCategory('Mobile')">Mobile</button>
+              <button  type="button" data-track-action="Filter" data-track-label="Watson" class="tagFilter btn btn-sm" data-toggle="button" ng-click="toggleCategory('Watson')">Watson</button>
             </tr>
           </table>
         </div>
