--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <meta name="description" content="The IBM-Bluemix GitHub.io site is a well-maintained, centralized, curated collection of open sample applications built using Bluemix and Bluemix services. The site gives developers a go-to page to see all Bluemix capabilities. There is option to filter samples by languages, categories or even industries to find the sample using the services you want." />
   <meta name="keywords" content="Build a toolchain application on Bluemix, Bluemix code Samples, Watson code samples, IoT samples, Bluemix Samples, Mobile development on Bluemix, Cloudant database on Bluemix, Text to Speech, Speech To Text" />
 
+  <meta name="segment" property="IBM-Bluemix.GitHub.io" value="BluemixSample">
+  <script src="https://dev-console.stage1.ng.bluemix.net/analytics/build/bluemix-analytics.js"></script>
+
   <!-- FontAwesome icons -->
   <link rel="stylesheet" href="//use.fontawesome.com/74dfc6cf47.css">
   <link rel="stylesheet" href="./css/bootstrap.css">
