--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <meta name="keywords" content="Build a toolchain application on Bluemix, Bluemix code Samples, Watson code samples, IoT samples, Bluemix Samples, Mobile development on Bluemix, Cloudant database on Bluemix, Text to Speech, Speech To Text" />
 
   <meta name="segment" property="IBM-Bluemix.GitHub.io" value="BluemixSample">
-  <script src="https://dev-console.stage1.ng.bluemix.net/analytics/build/bluemix-analytics.js"></script>
 
   <!-- FontAwesome icons -->
   <link rel="stylesheet" href="//use.fontawesome.com/74dfc6cf47.css">
@@ -216,7 +215,7 @@
 
 
 
-
+  <script type="text/javascript" src="//console.ng.bluemix.net/analytics/build/bluemix-analytics.min.js"></script>
   <!-- Vendor Libs: jQuery only used for Bootstrap functionality -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"> </script>
