--- a/index.html
+++ b/index.html
@@ -215,7 +215,8 @@
 
 
 
-  <script type="text/javascript" src="//console.ng.bluemix.net/analytics/build/bluemix-analytics.min.js"></script>
+  <script type="text/javascript" src="//dev-console.stage1.ng.bluemix.net/analytics/build/bluemix-analytics.js"></script>
+
   <!-- Vendor Libs: jQuery only used for Bootstrap functionality -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"> </script>
