--- a/index.html
+++ b/index.html
@@ -215,7 +215,6 @@
 
 
 
-  <script type="text/javascript" src="//dev-console.stage1.ng.bluemix.net/analytics/build/bluemix-analytics.js"></script>
 
   <!-- Vendor Libs: jQuery only used for Bootstrap functionality -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -234,6 +233,8 @@
   <script src="app/pjs.js"></script>
 
   <!-- Analytics -->
+  <script type="text/javascript" src="//console.ng.bluemix.net/analytics/build/bluemix-analytics.min.js"></script>
   <script src="scripts/analytics.js"></script>
+
 
 </html>
