--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
 
       </li>
     </ul>
+
     <div class="row">
       <div class="col-md-12 col-xs-12 footer">
         <footer>
@@ -233,7 +234,7 @@
   <script src="app/pjs.js"></script>
 
   <!-- Analytics -->
-  <script type="text/javascript" src="//console.ng.bluemix.net/analytics/build/bluemix-analytics.min.js"></script>
+  <script type="text/javascript" src="https://console.ng.bluemix.net/analytics/build/bluemix-analytics.min.js"></script>
   <script src="scripts/analytics.js"></script>
 
 
