--- a/index.html
+++ b/index.html
@@ -234,7 +234,9 @@
   <script src="app/pjs.js"></script>
 
   <!-- Analytics -->
-  <script type="text/javascript" src="https://console.ng.bluemix.net/analytics/build/bluemix-analytics.min.js"></script>
+  <!-- <script type="text/javascript" src="https://console.ng.bluemix.net/analytics/build/bluemix-analytics.min.js"></script> -->
+  <script src="https://dev-console.stage1.ng.bluemix.net/analytics/build/bluemix-analytics.js"></script>
+
   <script src="scripts/analytics.js"></script>
 
 
