--- a/index.html
+++ b/index.html
@@ -63,33 +63,8 @@
                     </g>
                 </svg>
               </a>
-              <a class="icon" data-track-action="Icon" data-track-label="StackOverFlow" target="_blank" href="http://stackoverflow.com/questions/tagged/ibm-bluemix">
-                <svg id="stackoverflow" class="logo-icon" width="50px" height="50px" viewBox="0 0 50 50" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                        <g id="bluemix-logo-copy-5" fill="#FFFFFF">
-                            <g id="Page-1" transform="translate(14.000000, 13.000000)">
-                                <polygon id="Fill-1" points="17.2099715 15.4170102 17.2099715 21.8339593 2.15283035 21.8339593 2.15283035 15.4170102 -6.14117653e-05 15.4170102 -6.14117653e-05 23.9734169 19.3626586 23.9734169 19.3626586 15.4170102"></polygon>
-                                <path d="M13.9550866,0.000101694915 L12.2277784,1.27657627 L18.6516536,9.85779661 L20.3789619,8.58132203 L13.9550866,0.000101694915 Z M8.61553835,5.05922034 L16.8868842,11.9032881 L18.2643501,10.2596949 L9.99320894,3.41562712 L8.61553835,5.05922034 Z M5.91546776,9.81549153 L15.6731831,14.330339 L16.5818725,12.3916271 L6.82415718,7.87637288 L5.91546776,9.81549153 Z M4.52162541,14.8266102 L15.0555854,17.0264746 L15.4981595,14.9331864 L4.96440424,12.7335254 L4.52162541,14.8266102 Z M4.30791247,19.6949492 L15.0717572,19.6949492 L15.0717572,17.5561017 L4.30791247,17.5561017 L4.30791247,19.6949492 Z" id="Fill-2"></path>
-                            </g>
-                        </g>
-                    </g>
-                </svg>
-              </a>
-              <a class="icon" data-track-action="Icon" data-track-label="github" target="_blank" href="https://github.com/IBM-Bluemix">
-                <svg id="github" class="logo-icon" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                        <g id="bluemix-logo-copy" transform="translate(-13.000000, -13.000000)" fill="#4178BE">
-                            <g id="Git_32h-Copy-5" transform="translate(13.000000, 13.000000)">
-                                <g id="Layer_1">
-                                    <g id="XMLID_10_">
-                                        <path d="M22.35,5.925 C21.3,4.05 19.8,2.625 18,1.575 C16.125,0.525 14.175,-1.77635684e-15 12,-1.77635684e-15 C9.825,-1.77635684e-15 7.8,0.525 6,1.575 C4.125,2.625 2.625,4.125 1.575,5.925 C0.525,7.8 0,9.75 0,11.925 C0,14.55 0.75,16.875 2.325,18.975 C3.825,21.075 5.85,22.5 8.25,23.325 C8.55,23.4 8.775,23.325 8.85,23.25 C9,23.1 9.075,22.95 9.075,22.8 L9.075,21.975 L9.075,20.55 L8.7,20.625 C8.475,20.7 8.175,20.7 7.8,20.7 C7.425,20.7 7.125,20.625 6.75,20.625 C6.375,20.55 6,20.4 5.7,20.175 C5.4,19.95 5.175,19.575 5.025,19.2 L4.875,18.825 C4.8,18.6 4.575,18.3 4.35,18 C4.125,17.7 3.9,17.475 3.675,17.4 L3.6,17.325 C3.525,17.25 3.45,17.175 3.375,17.1 C3.3,17.025 3.3,16.95 3.225,16.875 C3.225,16.8 3.225,16.725 3.3,16.725 C3.375,16.65 3.525,16.65 3.75,16.65 L3.975,16.725 C4.2,16.8 4.425,16.875 4.725,17.1 C5.025,17.325 5.25,17.55 5.475,17.925 C5.7,18.375 6,18.675 6.375,18.9 C6.75,19.125 7.05,19.2 7.425,19.2 C7.8,19.2 8.1,19.2 8.325,19.125 L9,18.9 C9.075,18.225 9.375,17.7 9.75,17.325 C9.15,17.25 8.625,17.175 8.175,17.025 C7.725,16.875 7.2,16.725 6.675,16.425 C6.15,16.125 5.775,15.825 5.4,15.375 C5.1,14.925 4.8,14.4 4.575,13.725 C4.425,13.05 4.275,12.225 4.275,11.325 C4.275,10.05 4.65,9 5.475,8.1 C5.175,7.2 5.175,6.15 5.625,4.95 C5.925,4.875 6.375,4.95 6.975,5.175 C7.575,5.4 8.025,5.625 8.25,5.775 C8.55,5.925 8.775,6.075 8.925,6.225 C9.9,5.925 10.875,5.85 11.925,5.85 C12.975,5.85 13.95,6 14.925,6.225 L15.525,5.85 C15.9,5.625 16.425,5.4 16.95,5.175 C17.475,4.95 17.925,4.875 18.225,5.025 C18.675,6.225 18.75,7.275 18.375,8.175 C19.2,9.075 19.575,10.125 19.575,11.4 C19.575,12.3 19.5,13.05 19.275,13.725 C19.05,14.4 18.75,14.925 18.45,15.375 C18.075,15.75 17.7,16.125 17.175,16.425 C16.65,16.725 16.2,16.875 15.675,17.025 C15.225,17.175 14.7,17.25 14.1,17.325 C14.625,17.775 14.925,18.525 14.925,19.575 L14.925,22.875 C14.925,23.025 15,23.25 15.15,23.325 C15.3,23.475 15.45,23.475 15.75,23.4 C18.15,22.575 20.175,21.15 21.675,19.05 C23.175,16.95 24,14.625 24,12 C23.925,9.825 23.4,7.8 22.35,5.925 L22.35,5.925 Z" id="XMLID_8_"></path>
-                                    </g>
-                                </g>
-                            </g>
-                        </g>
-                    </g>
-                </svg>
-              </a>
+               <a class="icon" data-track-action="Icon" data-track-label="StackOverFlow" target="_blank" href="http://stackoverflow.com/questions/tagged/ibm-bluemix"><i class="fa fa-stack-overflow"></i></a>
+               <a class="icon" data-track-action="Icon" data-track-label="github" target="_blank" href="https://github.com/IBM-Bluemix"><i class="fa fa-github"></i></a>
             </div>
           </div>
         </div>
