--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     </div>
 
     <ul class="items-wrapper"><!-- START FULL PAGE -->
-      <li class="inside project-item" ng-repeat="sample in ( filteredLinks = ( samples | filter:searchTextData | filter:tagP.sort | samplesFilter:tagP)) " ng-class="filteredLinks">
+      <li class="inside project-item" ng-repeat="sample in ( filteredLinks = ( samples | filter:searchTextData | filter:tagP.sort | samplesFilter:tagP))">
 
         <div class="project-outer" ng-class="{demo: link.tags.indexOf('demo')>=0}">
 
