--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <div class="filterAreaDiv">
             <div class='bx--select'>
               <select id="sortBy" ng-model="tagP.sort" class="form-sorting">
-                <option  disabled value >Sort by: All</option>
+                <option  value="" >Sort by: All</option>
                 <option value="Most Viewed" >Most Viewed</option>
                 <option value="Recently Added" >Recently Added</option>
               </select>
@@ -164,7 +164,7 @@
     </div>
 
     <ul class="items-wrapper"><!-- START FULL PAGE -->
-      <li class="inside project-item" ng-repeat="sample in ( filteredLinks = ( samples | filter:searchTextData | filter:tagP.sort | samplesFilter:tagP))">
+      <li class="inside project-item" ng-repeat="sample in ( filteredLinks = ( samples | orderBy:random | filter:searchTextData | filter:tagP.sort | samplesFilter:tagP))">
 
         <div class="project-outer" ng-class="{demo: link.tags.indexOf('demo')>=0}">
 
