--- a/index.html
+++ b/index.html
@@ -259,6 +259,8 @@
   <script src="https://dev-console.stage1.ng.bluemix.net/analytics/build/bluemix-analytics.js"></script>
 
   <script src="scripts/analytics.js"></script>
+<script src="scripts/bluemixAnalytics.js"></script>
 
+  <script src="//www.ibm.com/common/stats/ida_production.js" type="text/javascript"></script>
 
 </html>
