adding segment tracking

--- a/index.html
+++ b/index.html
@@ -259,5 +259,7 @@
   <script src="scripts/google-analytics.js"></script>
   <script src="scripts/snipes.js"></script>
   <script src="scripts/ida_production.js"></script>
+  <script src="scripts/segment.js"></script>
+
 
 </html>
