--- a/index.html
+++ b/index.html
@@ -256,8 +256,10 @@
 
   <!-- Loading Google Analytics, Amplitude, snipes for (Tealium and Coremetrics), ida_production -->
   <script src="scripts/google-analytics.js"></script>
+  <script src="https://console.stage1.ng.bluemix.net/analytics/build/bluemix-analytics.js"></script>
   <script src="scripts/snipes.js"></script>
   <script src="scripts/ida_production.js"></script>
+
   <script src="scripts/segment.js"></script>
 
 
