Add more event clicks

--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
             <footer>
 
                 Made with <i class="fa fa-heart" aria-hidden="true"></i> by the Bluemix team</br>
-                Powered by <a href="https://www.ibm.com/cloud-computing/bluemix">IBM Bluemix.</a> See all of our samples
-                on <a id="GitHubTestLink" href="https://github.com/IBM-Bluemix">IBM-Bluemix GitHub</a><br> Copyright © IBM 2017.
+                Powered by <a id="IBMBluemix" target="_blank" href="https://www.ibm.com/cloud-computing/bluemix">IBM Bluemix.</a> See all of our samples
+                on <a id="IBMBluemixGitHub" target="_blank" href="https://github.com/IBM-Bluemix">IBM-Bluemix GitHub</a><br> Copyright © IBM 2017.
             </footer>
         </div>
     </div>
@@ -320,23 +320,7 @@
 
 -->
 
-<script type="text/javascript">
-    !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t){var e=document.createElement("script");e.type="text/javascript";e.async=!0;e.src=("https:"===document.location.protocol?"https://":"http://")+"cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(e,n)};analytics.SNIPPET_VERSION="4.0.0";
-        analytics.load("34Q2oApcF5UJE03NgXwTY6A7f6MTs3kx");
-        analytics.page();
-    }}();
-
-    if (window.bluemixAnalytics) {
-        analytics.track('Home Page', {
-            plan: 'Enterprise1'
-        });
-    }
-
-    var link = document.getElementById('GitHubTestLink');
-    analytics.trackLink(link, 'Clicked on IBM-Bluemix GitHub Link', {
-        plan: 'Enterprise2'
-    });
-</script>
+<script src="scripts/segment.js"></script>
 
 
 
