--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
         </li>
     </ul>
 
+
     <div class="row">
         <div class="col-md-12 col-xs-12 footer">
             <footer>
@@ -303,5 +304,14 @@
 <script src="./scripts/angulartics-segment.min.js"></script>
 <script src="scripts/segment.js"> </script>
 
+<!-- NPS Feedback -->
+<script>
+    window.ibmNps = {
+        offeringId: "af2c9d18-7f3a-4b6f-bc69-d263e81abf24",
+        userId: "some.user@myoffering.com",
+        test: true
+    };
+</script>
+<script async src="https://nps.mybluemix.net/survey/nps-survey.js"></script>
 
 </html>
