--- a/index.html
+++ b/index.html
@@ -309,9 +309,12 @@
     window.ibmNps = {
         offeringId: "af2c9d18-7f3a-4b6f-bc69-d263e81abf24",
         userId: "some.user@myoffering.com",
-        test: true
+        test: false
     };
 </script>
 <script async src="https://nps.mybluemix.net/survey/nps-survey.js"></script>
+
+
+
 
 </html>
