--- a/index.html
+++ b/index.html
@@ -278,44 +278,6 @@
     <br>
 </div>
 
-
-<a href="#" onclick="showNpsSurvey();return false" class="survey cancelled-out-taborder" tabindex="0">
-    <div class="floating-feedback">
-        <!--?xml version="1.0" encoding="utf-8"?-->
-        <!-- Generator: Adobe Illustrator 19.2.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 15 50.6" style="enable-background:new 0 0 15 50.6" xml:space="preserve" class="feedback-icon">
-          <g class="feedback-inner">
-          	<g class="feedback-inner-g">
-          		<g>
-          			<path d="M14.5,7.5H14c0,1.8-0.7,3.4-1.9,4.6S9.3,14,7.5,14s-3.4-0.7-4.6-1.9S1,9.3,1,7.5s0.7-3.4,1.9-4.6
-          				S5.7,1,7.5,1s3.4,0.7,4.6,1.9S14,5.7,14,7.5H14.5H15C15,3.4,11.6,0,7.5,0S0,3.4,0,7.5S3.4,15,7.5,15S15,11.6,15,7.5H14.5z"></path>
-          			<path d="M10.3,7.8c0,1.5-1.3,2.8-2.8,2.8S4.7,9.3,4.7,7.8h-1c0,2.1,1.7,3.8,3.8,3.8s3.8-1.7,3.8-3.8H10.3L10.3,7.8z"></path>
-          			<circle cx="5.4" cy="5.4" r="0.8"></circle>
-          			<circle cx="9.6" cy="5.4" r="0.8"></circle>
-          		</g>
-          		<g>
-          			<path d="M14.5,25.3H14c0,1.8-0.7,3.4-1.9,4.6s-2.8,1.9-4.6,1.9s-3.4-0.7-4.6-1.9S1,27.1,1,25.3
-          				c0-1.8,0.7-3.4,1.9-4.6s2.8-1.9,4.6-1.9s3.4,0.7,4.6,1.9c1.2,1.2,1.9,2.8,1.9,4.6H14.5H15c0-4.1-3.4-7.5-7.5-7.5S0,21.2,0,25.3
-          				s3.4,7.5,7.5,7.5s7.5-3.4,7.5-7.5H14.5z"></path>
-          			<polyline points="3.8,27.8 11.2,27.8 11.2,26.8 3.8,26.8 			"></polyline>
-          			<circle cx="5.4" cy="23.2" r="0.8"></circle>
-          			<circle cx="9.6" cy="23.2" r="0.8"></circle>
-          		</g>
-          		<g>
-          			<path d="M14.5,43.1H14c0,1.8-0.7,3.4-1.9,4.6c-1.2,1.2-2.8,1.9-4.6,1.9s-3.4-0.7-4.6-1.9C1.7,46.5,1,44.9,1,43.1
-          				c0-1.8,0.7-3.4,1.9-4.6c1.2-1.2,2.8-1.9,4.6-1.9s3.4,0.7,4.6,1.9s1.9,2.8,1.9,4.6H14.5H15c0-4.1-3.4-7.5-7.5-7.5S0,39,0,43.1
-          				s3.4,7.5,7.5,7.5s7.5-3.4,7.5-7.5H14.5z"></path>
-          			<path d="M4.7,46.8C4.7,45.2,6,44,7.5,44s2.8,1.3,2.8,2.8h1c0-2.1-1.7-3.8-3.8-3.8s-3.8,1.7-3.8,3.8H4.7L4.7,46.8z"></path>
-          			<circle cx="5.4" cy="41" r="0.8"></circle>
-          			<circle cx="9.6" cy="41" r="0.8"></circle>
-          		</g>
-          	</g>
-          </g>
-          </svg>
-    </div>
-</a>
-
-
 </body>
 
 
@@ -347,10 +309,12 @@
     window.ibmNps = {
         offeringId: "af2c9d18-7f3a-4b6f-bc69-d263e81abf24",
         userId: "some.user@myoffering.com",
-        test: true,
-        forceSurvey: true
+        test: false
     };
 </script>
 <script async src="https://nps.mybluemix.net/survey/nps-survey.js"></script>
+
+
+
 
 </html>
