--- a/index.html
+++ b/index.html
@@ -270,9 +270,11 @@
             <footer>
 
                 Made with <i class="fa fa-heart" aria-hidden="true"></i> by the Bluemix team</br>
-                Powered by <a id="IBMBluemix" target="_blank" href="https://www.ibm.com/cloud-computing/bluemix" analytics-on="click" analytics-event="Footer To: IBM Bluemix Site">IBM Bluemix.</a> See all of our samples
-                on <a id="IBMBluemixGitHub" target="_blank" href="https://github.com/IBM-Bluemix" analytics-on="click" analytics-event="Footer To: Main IBM GitHub">IBM-Bluemix GitHub</a><br> Copyright © IBM 2017.
+                Copyright © IBM 2017 | <a target="_blank" href="https://www.ibm.com/privacy/us/en/?lnk=flg-priv-usen" analytics-on="click" analytics-event="Footer To: Privacy">Privacy</a>
+                <br>Powered by <a id="IBMBluemix" target="_blank" href="https://www.ibm.com/cloud-computing/bluemix" analytics-on="click" analytics-event="Footer To: IBM Bluemix Site">IBM Bluemix</a>
+                <br>
             </footer>
+
         </div>
     </div>
     <br>
